toolbox/service.yml
apiVersion: v1
kind: Service
metadata:
  name: toolbox-service
  labels:
    app.kubernetes.io/name: toolbox-service
    app.kubernetes.io/part-of: toolbox
spec:
  selector:
    app: toolbox
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
